--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,53 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-#container{
+body {
+    height: 100vh;
+    display: grid;
+    place-items: center;
+  }
+  
+  .slider {
+    width: 100%;
+    max-width: 800px;
+    height: 350px;
     position: relative;
-    min-height: 100vh;
-}
-.slider{
+    overflow: hidden; 
+  }
+  
+  .slide {
+    width: 100%;
+    max-width: 800px;
+    height: 350px;
     position: absolute;
-    width: 50vw;
-    height: 50vh;
-    top: 30%;
-    left: 25%;
-}
-
-.slider>img.hidden{ 
-    display: none;
-    height: 100%;
+    transition: all 0.5s;
+  }
+  
+  .slide img {
     width: 100%;
-    object-fit: cover;
-}
-.slider>img.show{
-    display: block;
     height: 100%;
-    width: 100%;
     object-fit: cover;
-}
+  }
+  
+  .btn {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    padding: 10px;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    background-color: #fff;
+    font-size: 18px;
+  }
+  
+  .btn:active {
+    transform: scale(1.1);
+  }
+  
+  .btn-prev {
+    top: 45%;
+    left: 2%;
+  }
+  
+  .btn-next {
+    top: 45%;
+    right: 2%;
+  }
